--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -32,13 +32,11 @@
   font-size: 42px;
   line-height: 1.14;
   margin: 0;
-  max-width: 373px;
-  display: flex;
+  max-width: 400px;
   align-self: center;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  padding-right: 18px;
 }
 
 .profile__subheader {
@@ -46,8 +44,8 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.22;
+  max-width: 410px;
   margin: 0;
-  display: flex;
   flex: 1;
   padding-top: 16px;
   text-overflow: ellipsis;
@@ -66,6 +64,7 @@
   display: flex;
   flex: 0;
   transition: 0.3s;
+  margin-left: 18px;
 }
 
 .profile__edit-button:hover {
